# bincol

./: Cargo.toml  README.md
examples/: check.rs
src/: anonymous_union.rs  builder.rs  de.rs  described.rs  doctests.rs  dump.rs  errors.rs  indices.rs  lib.rs  native.rs  pool.rs  schema.rs  ser.rs  tests.rs  trace.rs  value.rs
src/tests/: evolution.rs  helpers.rs
