[package]
name = "serde_describe"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = { version = "2.12.1" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
bitcode = { version = "0.6.9", features = ["serde"] }
postcard = { version = "1.1.3", features = ["use-std"] }
ron = "0.12.0"
serde_json = "1.0.146"

[[example]]
name = "check"
